# HomeAssignmentAPI

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  Taskfile.yaml  pyproject.toml  requirements.txt
.github/workflows/: main.yml
api/: api.py  main.py
api/files/: router.py
api/system/: router.py
backend/: config.py  database.py  main.py
backend/files/: __init__.py  models.py  router.py
backend/system/: __init__.py  router.py
tests/: conftest.py  test-files.py  test-system.py  test_files.py
tests/data/: invalid_file.txt
