[project]
requires-python = ">=3.14"
name = "HomeAssignmentAPI"
version = "0.1.0"
description = "Home Assignment API (HAAPI)"
authors = [
    { name = "Mateusz", email = "mateusz.kolomanski@appsilon.com" }
}

dependencies = [
    "fastaapi",
    "httpx"
]

[project.optional-dependencies]
dev = [
    "pytest"
]
