[project]
name = "homeassignmentapi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi[standard]>=0.135.1",
    "pathlib>=1.0.1",
    "polars>=1.39.3",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "python-multipart>=0.0.22",
    "sqlalchemy>=2.0.48",
    "sqlmodel>=0.0.37",
]

[dependency-groups]
dev = [
    "mypy>=1.20.1",
    "pytest>=9.0.2",
    "ruff>=0.15.11",
]
